--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,126 @@
+
 .titillium-font {
     font-family: 'Titillium Web', sans-serif;
+}
+
+/*-----------------------------------------------------------------------------------------------------
+    Horizontal bar
+------------------------------------------------------------------------------------------------------*/
+.navbar-global {
+    background-color: indigo;
+}
+
+.navbar-global .navbar-brand {
+    color: white;
+}
+
+.navbar-global .navbar-user > li > a {
+    color: white;
+}
+
+/*-----------------------------------------------------------------------------------------------------
+    Vertical collapsible sidebar
+------------------------------------------------------------------------------------------------------*/
+.navbar-primary {
+    background-color: #333;
+    bottom: 0px;
+    left: 0px;
+    position: absolute;
+    top: 51px;
+    width: 200px;
+    z-index: 8;
+    overflow: hidden;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
+}
+
+.navbar-primary.collapsed {
+    width: 60px;
+}
+
+.navbar-primary.collapsed .glyphicon {
+    font-size: 22px;
+}
+
+.navbar-primary.collapsed .nav-label {
+    display: none;
+}
+
+.btn-expand-collapse {
+    position: absolute;
+    display: block;
+    left: 0px;
+    bottom:0;
+    width: 100%;
+    padding: 8px 0;
+    border-top:solid 1px #666;
+    color: grey;
+    font-size: 20px;
+    text-align: center;
+}
+
+.btn-expand-collapse:hover,
+.btn-expand-collapse:focus {
+    background-color: #222;
+    color: white;
+}
+
+.btn-expand-collapse:active {
+    background-color: #111;
+}
+
+.navbar-primary-menu,
+.navbar-primary-menu li {
+    margin:0; padding:0;    
+    list-style: none;
+}
+
+.navbar-primary-menu li a {
+    display: block;
+    padding: 10px 18px;
+    text-align: left;
+    border-bottom:solid 1px #444;
+    color: #ccc;
+}
+
+.navbar-primary-menu li a:hover {
+    background-color: #000;
+    text-decoration: none;
+    color: white;
+}
+
+.navbar-primary-menu li a .glyphicon {
+margin-right: 6px;
+}
+
+.navbar-primary-menu li a:hover .glyphicon {
+    color: orchid;
+}
+
+.main-content {
+    margin-top: 60px;
+    margin-left: 200px;
+    padding: 20px;
+}
+
+.collapsed + .main-content {
+    margin-left: 60px;
+}
+
+/*-----------------------------------------------------------------------------------------------------
+    Footer
+------------------------------------------------------------------------------------------------------*/
+.footer {
+    background-color: #a6a6a6;
+    padding: 2%;
+    z-index: -1;
+}
+
+.mr-2 {
+    margin-right: 2%;
+}
+
+.w-3 {
+    width: 30%;
 }
