--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cotxox</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Cotxox App</title>
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/css/styles.css">
+        <!-- Latest compiled and minified CSS from Bootstrap 3-->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
-</head>
-<body>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-2">
-                <p class="titillium-font">Index page</p>
+        <!-- Customed css-->
+        <link rel="stylesheet" href="../assets/css/styles.css">
+
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <!-- Horizontal bar -->
+        <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Cotxox App</a>
+                </div>
+                <div id="navbar" class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-user navbar-right">
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span>Sofía Lópex</a></li>
+                        <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Vertical collapsible sidebar -->
+        <nav class="navbar-primary">
+            <a href="#" class="btn-expand-collapse"><span class="glyphicon glyphicon-menu-left"></span></a>
+            <ul class="navbar-primary-menu">
+                <li>
+                    <a href="#"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
+                    <a href="#"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
+                    <a href="#"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
+                    <a href="#"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
+                </li>
+            </ul>
+        </nav>
+        <div class="container-fluid main-content titillium-font">
+            <h1> I am the main content </h1>
+            <p>Base page</p>
+        </div>
+        <div class="footer navbar-fixed-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col pull-right w-3 ">
+                        <span class="text-mutted">Made with </span><span class="glyphicon glyphicon-heart"></span>
+                            <span class="text-mutted mr-2"> by Claudia</span>
+                        <span class="text-mutted">2019</span>
+                    </div>
+                </div>                
             </div>
         </div>
-    </div>
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <!-- Latest compiled JavaScript from Bootstrap 3-->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-</body>
+        <!-- Customed JavaScript file-->
+        <script src="../assets/js/init.js"></script>
+    </body>
 </html>
