--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,11 @@
 
 .navbar-global .navbar-user > li > a {
     color: white;
+    display: flex;
+}
+
+.navbar {
+    height: 60px;;
 }
 
 /*-----------------------------------------------------------------------------------------------------
@@ -26,7 +31,7 @@
     bottom: 0px;
     left: 0px;
     position: absolute;
-    top: 51px;
+    top: 60px;
     width: 200px;
     z-index: 8;
     overflow: hidden;
@@ -114,7 +119,8 @@ margin-right: 6px;
 .footer {
     background-color: #a6a6a6;
     padding: 2%;
-    z-index: -1;
+    z-index: 0;
+    opacity: 1;
 }
 
 .mr-2 {
@@ -124,3 +130,8 @@ margin-right: 6px;
 .w-3 {
     width: 30%;
 }
+
+/*-----------------------------------------------------------------------------------------------------
+    Previous trips table
+------------------------------------------------------------------------------------------------------*/
+
