--- a/templates/index.html
+++ b/templates/index.html
@@ -20,18 +20,17 @@
         <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" 
-                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Cotxox App</a>
+                    <a class="navbar-brand" href="index.html">Cotxox App</a>
                 </div>
-                <div id="navbar" class="collapse navbar-collapse">
+                <div id="navbar" class="collapse navbar-collapse display-flex">
                     <ul class="nav navbar-nav navbar-user navbar-right">
-                        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
                         <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </div>
@@ -43,7 +42,7 @@
             <a href="#" class="btn-expand-collapse"><span class="glyphicon glyphicon-menu-left"></span></a>
             <ul class="navbar-primary-menu">
                 <li>
-                    <a href="#"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
+                    <a href="trips.html"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
                     <a href="#"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
                     <a href="#"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
                     <a href="#"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
@@ -52,15 +51,7 @@
         </nav>
         <div class="container-fluid main-content titillium-font">
             <h1> I am the main content </h1>
-            <table id="table" data-height="460">
-                <thead>
-                    <tr>
-                        <th data-field="id">Item ID</th>
-                        <th data-field="name">Item Name</th>
-                        <th data-field="price">Item Price</th>
-                    </tr>
-                </thead>
-            </table>
+            <p>Base page</p>
         </div>
         <div class="footer navbar-fixed-bottom">
             <div class="container">
