--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -132,6 +132,12 @@ margin-right: 6px;
 }
 
 /*-----------------------------------------------------------------------------------------------------
-    Previous trips table
+    Map
 ------------------------------------------------------------------------------------------------------*/
-
+#map { 
+    position:relative; 
+    top:0; 
+    bottom:0; 
+    width: 100%; 
+    height: 75vh;
+}
