--- a/templates/map.html
+++ b/templates/map.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-table/1.10.1/bootstrap-table.min.css">
 
+        <!-- Map CSS -->
+        <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
+
         <!-- Customed css-->
         <link rel="stylesheet" href="../assets/css/styles.css">
 
@@ -21,17 +24,18 @@
         <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" 
+                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Cotxox App</a>
+                    <a class="navbar-brand" href="#">Cotxox App</a>
                 </div>
-                <div id="navbar" class="collapse navbar-collapse display-flex">
+                <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-user navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
                         <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </div>
@@ -51,8 +55,7 @@
             </ul>
         </nav>
         <div class="container-fluid main-content titillium-font">
-            <h1> I am the main content </h1>
-            <p>Base page</p>
+                <div id='map'></div>
         </div>
         <div class="footer navbar-fixed-bottom">
             <div class="container">
