--- a/templates/base.html
+++ b/templates/base.html
@@ -46,22 +46,14 @@
                 <li>
                     <a href="trips.html"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
                     <a href="map.html"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
-                    <a href="#"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
+                    <a href="settings.html"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
                     <a href="#"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
                 </li>
             </ul>
         </nav>
         <div class="container-fluid main-content titillium-font">
             <h1> I am the main content </h1>
-            <table id="table" data-height="460">
-                <thead>
-                    <tr>
-                        <th data-field="id">Item ID</th>
-                        <th data-field="name">Item Name</th>
-                        <th data-field="price">Item Price</th>
-                    </tr>
-                </thead>
-            </table>
+            <p>Base html</p>
         </div>
         <div class="footer navbar-fixed-bottom">
             <div class="container">
