--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,26 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+
+.mr-2 {
+    margin-right: 2%;
+}
+
+.w-3 {
+    width: 30%;
+}
+
+.mt-2 {
+    margin-top: 2%;
+}
+
+.text-bold {
+    font-weight: bold;
+}
+
+.resize {
+    width: 50vh;
+}
 /*-----------------------------------------------------------------------------------------------------
     Horizontal bar
 ------------------------------------------------------------------------------------------------------*/
@@ -30,7 +50,7 @@
     background-color: #333;
     bottom: 0px;
     left: 0px;
-    position: absolute;
+    position: fixed;
     top: 60px;
     width: 200px;
     z-index: 8;
@@ -123,14 +143,6 @@ margin-right: 6px;
     opacity: 1;
 }
 
-.mr-2 {
-    margin-right: 2%;
-}
-
-.w-3 {
-    width: 30%;
-}
-
 /*-----------------------------------------------------------------------------------------------------
     Map
 ------------------------------------------------------------------------------------------------------*/
@@ -140,4 +152,29 @@ margin-right: 6px;
     bottom:0; 
     width: 100%; 
     height: 75vh;
+}
+
+/*-----------------------------------------------------------------------------------------------------
+    Form
+------------------------------------------------------------------------------------------------------*/
+.inputs {
+    margin: 2% 2% 0% 0%;
+    display: block;
+}
+
+@media only screen and (min-width: 601px) {
+    .settings-body {
+        height: 120vh;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+
+    .settings-body {
+        height: 150vh;
+    }
+}
+
+.form-response {
+    font-size: 2.5em;
 }
