--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                 <li>
                     <a href="trips.html"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
                     <a href="map.html"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
-                    <a href="#"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
+                    <a href="settings.html"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
                     <a href="#"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
                 </li>
             </ul>
