--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,6 +23,10 @@
 .resize {
     width: 50vh;
 }
+
+.mt-5 {
+    margin-top: 5%;
+}
 /*-----------------------------------------------------------------------------------------------------
     Horizontal bar
 ------------------------------------------------------------------------------------------------------*/
@@ -177,4 +181,11 @@ margin-right: 6px;
 
 .form-response {
     font-size: 2.5em;
+}
+
+/*-----------------------------------------------------------------------------------------------------
+    FAQ
+------------------------------------------------------------------------------------------------------*/
+.resize-faq {
+    width: 120vh;
 }
