--- a/templates/faq.html
+++ b/templates/faq.html
@@ -21,17 +21,18 @@
         <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" 
+                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Cotxox App</a>
+                    <a class="navbar-brand" href="#">Cotxox App</a>
                 </div>
-                <div id="navbar" class="collapse navbar-collapse display-flex">
+                <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-user navbar-right">
-                        <li><a href="#"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
+                        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
                         <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </div>
@@ -50,9 +51,59 @@
                 </li>
             </ul>
         </nav>
-        <div class="container-fluid main-content titillium-font">
-            <h1> I am the main content </h1>
-            <p>Base page</p>
+        <div class="container-fluid main-content titillium-font resize-faq">
+            <h1>FAQ</h1>
+            <div class="row mt-5">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Get a ride steps</button>
+                    <div id="demo" class="collapse">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo1">Which pay methods are aviable</button>
+                    <div id="demo1" class="collapse">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo2">How to rate your driver</button>
+                    <div id="demo2" class="collapse">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo3">Edit profile configurations</button>
+                    <div id="demo3" class="collapse">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo4">Delete account</button>
+                    <div id="demo4" class="collapse">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    </div>
+                </div>
+            </div>
+            
         </div>
         <div class="footer navbar-fixed-bottom">
             <div class="container">
