--- a/templates/index.html
+++ b/templates/index.html
@@ -50,9 +50,14 @@
                 </li>
             </ul>
         </nav>
-        <div class="container-fluid main-content titillium-font">
-            <h1> I am the main content </h1>
-            <p>Base page</p>
+        <div class="container-fluid main-content titillium-font header">
+            <div class="row">
+                <div class="col pull-right">
+                        <p class="p1">Get a ride</p>
+                        <p class="p2">in minutes!</p>
+                        <p class="animated fadeOutRight infinite slow arrow">→</p> 
+                </div>
+            </div>
         </div>
         <div class="footer navbar-fixed-bottom">
             <div class="container">
