--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,17 +3,25 @@
     font-family: 'Titillium Web', sans-serif;
 }
 
+.mt-2 {
+    margin-top: 2%;
+}
+
+
+.mt-5 {
+    margin-top: 5%;
+}
 
 .mr-2 {
     margin-right: 2%;
 }
 
-.w-3 {
-    width: 30%;
+.mr-10 {
+    margin-right: 5%;
 }
 
-.mt-2 {
-    margin-top: 2%;
+.w-3 {
+    width: 30%;
 }
 
 .text-bold {
@@ -24,9 +32,73 @@
     width: 50vh;
 }
 
-.mt-5 {
-    margin-top: 5%;
+/*-----------------------------------------------------------------------------------------------------
+    Home
+------------------------------------------------------------------------------------------------------*/
+.header {
+    width: 140vh;
 }
+
+.p1 {
+    font-size: 5em;
+}
+
+.p2 {
+    font-size: 2.5em;
+    font-style: italic;
+}
+
+.arrow {
+    padding: 0%;
+    font-size: 10em;
+}
+
+.animated {
+    -webkit-animation-duration: 1s;
+    animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animated.infinite {
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+
+.animated.slow {
+    -webkit-animation-duration: 2s;
+    animation-duration: 2s;
+}
+
+@-webkit-keyframes fadeOutRight {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      -webkit-transform: translate3d(100%, 0, 0);
+      transform: translate3d(100%, 0, 0);
+    }
+}
+  
+  @keyframes fadeOutRight {
+    from {
+      opacity: 1;
+    }
+  
+    to {
+      opacity: 0;
+      -webkit-transform: translate3d(100%, 0, 0);
+      transform: translate3d(100%, 0, 0);
+    }
+}
+  
+.fadeOutRight {
+    -webkit-animation-name: fadeOutRight;
+    animation-name: fadeOutRight;
+}
+
 /*-----------------------------------------------------------------------------------------------------
     Horizontal bar
 ------------------------------------------------------------------------------------------------------*/
