--- a/templates/faq.html
+++ b/templates/faq.html
@@ -28,11 +28,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Cotxox App</a>
+                    <a class="navbar-brand" href="index.html">Cotxox App</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-user navbar-right">
-                        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
                         <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
             </ul>
         </nav>
         <div class="container-fluid main-content titillium-font resize-faq">
-            <h1>FAQ</h1>
+            <h1>Frequently Asked Questions</h1>
             <div class="row mt-5">
                 <div class="col-md-12">
                     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Get a ride steps</button>
