--- a/templates/map.html
+++ b/templates/map.html
@@ -31,11 +31,11 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Cotxox App</a>
+                    <a class="navbar-brand" href="index.html">Cotxox App</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-user navbar-right">
-                        <li><a href="index.html"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
                         <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                     </ul>
                 </div>
