--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,6 +119,12 @@
     height: 60px;;
 }
 
+.car {
+    font-size: 2em;
+    margin-top: 2vh;
+    color: orchid;
+}
+
 /*-----------------------------------------------------------------------------------------------------
     Vertical collapsible sidebar
 ------------------------------------------------------------------------------------------------------*/
