--- a/templates/trips.html
+++ b/templates/trips.html
@@ -16,6 +16,10 @@
 
         <!-- Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Titillium+Web&display=swap" rel="stylesheet">
+
+        <!-- Car -->
+        <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' 
+            integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     </head>
     <body>
         <!-- Horizontal bar -->
@@ -29,7 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Cotxox App</a>
+                    <a class="navbar-brand" href="index.html">Cotxox App</a><i class="fas fa-car-side car"></i>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-user navbar-right">
