--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,6 +99,24 @@
     animation-name: fadeOutRight;
 }
 
+.get-a-ride{
+    color:black;
+    text-decoration: none;
+    transition-duration: 500ms;
+    text-shadow: 0px 4px 10px rgba(0,0,0,0.15),
+                 0px 8px 2px rgba(0,0,0,0.1)
+
+}
+
+.get-a-ride{
+    color:black;
+    text-decoration: none;
+    transition-duration: 500ms;
+    text-shadow: 0px 4px 10px rgba(0,0,0,0.15),
+                 0px 8px 2px rgba(0,0,0,0.1)
+
+}
+
 /*-----------------------------------------------------------------------------------------------------
     Horizontal bar
 ------------------------------------------------------------------------------------------------------*/
