--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+        <link rel="icon" href="../assets/img/cotxox-icon.PNG">
         <title>Cotxox App</title>
 
         <!-- Latest compiled and minified CSS from Bootstrap -->
@@ -57,9 +59,13 @@
         <div class="container-fluid main-content titillium-font header">
             <div class="row">
                 <div class="col pull-right">
-                        <p class="p1">Get a ride</p>
-                        <p class="p2">in minutes!</p>
-                        <p class="animated fadeOutRight infinite slow arrow">→</p> 
+                        
+                        <a href="#" class="get-a-ride">
+                            <p class="p1">Get a ride</p>
+                            <p class="p2">in minutes!</p>
+                            <p class="animated fadeOutRight infinite slow arrow">→</p>
+                        </a> 
+                        
                 </div>
             </div>
         </div>
