--- a/templates/faq.html
+++ b/templates/faq.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+        <link rel="icon" href="../assets/img/cotxox-icon.PNG">
         <title>Cotxox App</title>
 
         <!-- Latest compiled and minified CSS from Bootstrap -->
