Page under construction

--- a/templates/cotxox_app.html
+++ b/templates/cotxox_app.html
@@ -27,7 +27,8 @@
         <nav class="navbar navbar-inverse navbar-global navbar-fixed-top">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" 
+                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -35,7 +36,7 @@
                     </button>
                     <a class="navbar-brand" href="index.html">Cotxox App</a><i class="fas fa-car-side car"></i>
                 </div>
-                <div id="navbar" class="collapse navbar-collapse display-flex">
+                <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-user navbar-right">
                         <li><a href="#"><span class="glyphicon glyphicon-user"></span><p id="output"></p></a></li>
                         <li><a href="#about"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
@@ -52,22 +53,13 @@
                     <a href="trips.html"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
                     <a href="map.html"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
                     <a href="settings.html"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
-                    <a href="faq.html"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
+                    <a href="#"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
                 </li>
             </ul>
         </nav>
-        <div class="container-fluid main-content titillium-font header">
-            <div class="row">
-                <div class="col pull-right">
-                        
-                        <a href="cotxox_app.html" class="get-a-ride">
-                            <p class="p1">Get a ride</p>
-                            <p class="p2">in minutes!</p>
-                            <p class="animated fadeOutRight infinite slow arrow">→</p>
-                        </a> 
-                        
-                </div>
-            </div>
+        <div class="container-fluid main-content titillium-font display-flex">
+                <i class="fas fa-poo big-poo"></i> 
+            <h2>Page under construction</h2>           
         </div>
         <div class="footer navbar-fixed-bottom">
             <div class="container">
