--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,14 +108,36 @@
 
 }
 
-.get-a-ride{
+.get-a-ride:hover {
     color:black;
-    text-decoration: none;
+    text-decoration: none !important;
     transition-duration: 500ms;
-    text-shadow: 0px 4px 10px rgba(0,0,0,0.15),
-                 0px 8px 2px rgba(0,0,0,0.1)
+    text-shadow: 0px 2px 5px rgba(0,0,0,0.15),
+                 0px 4px 2px rgba(0,0,0,0.1)
 
 }
+
+.get-a-ride:active {
+    color:black;
+    text-decoration: none !important;
+    transition-duration: 500ms;
+    text-shadow: 0px 2px 10px rgba(0,0,0,0.15),
+                 0px 8px 2px rgba(0,0,0,0.1)
+}
+
+.get-a-ride:visited {
+    color:black;
+    text-decoration: none !important;
+    transition-duration: 500ms;
+    text-shadow: 0px 4px 10px rgba(0,0,0,0.15),
+                 0px 8px 2px rgba(0,0,0,0.1);
+}
+
+.get-a-ride:link {
+    color:black;
+    text-decoration: none;
+}
+
 
 /*-----------------------------------------------------------------------------------------------------
     Horizontal bar
@@ -284,4 +306,15 @@ margin-right: 6px;
 ------------------------------------------------------------------------------------------------------*/
 .resize-faq {
     width: 120vh;
+}
+
+/*-----------------------------------------------------------------------------------------------------
+    Cotxox App
+------------------------------------------------------------------------------------------------------*/
+.big-poo {
+    font-size: 5em;
+}
+
+.display-flex {
+    display: flex;
 }
