Added searcher and report

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                     <a href="trips.html"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
                     <a href="map.html"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
                     <a href="settings.html"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
-                    <a href="#"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
+                    <a href="faq.html"><span class="glyphicon glyphicon-comment"></span><span class="nav-label">FAQ</span></a>
                 </li>
             </ul>
         </nav>
