--- a/templates/map.html
+++ b/templates/map.html
@@ -53,6 +53,14 @@
             <a href="#" class="btn-expand-collapse"><span class="glyphicon glyphicon-menu-left"></span></a>
             <ul class="navbar-primary-menu">
                 <li>
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Search" id="txtSearch"/>
+                        <div class="input-group-btn">
+                            <button class="btn btn-primary" type="submit">
+                            <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </div>
+                    </div>
                     <a href="trips.html"><span class="glyphicon glyphicon-list-alt"></span><span class="nav-label">My trips</span></a>
                     <a href="map.html"><span class="glyphicon glyphicon-map-marker"></span><span class="nav-label">Map</span></a>
                     <a href="settings.html"><span class="glyphicon glyphicon-cog"></span><span class="nav-label">Settings</span></a>
