--- a/templates/settings.html
+++ b/templates/settings.html
@@ -62,7 +62,7 @@
             <form id="form" method="POST" action="settings_response.html">
                 <div class="row">
                     <div class="col-md-2 pull-right mt-2">
-                        <input id="submit" type="submit" value="Save"></input>
+                        <input id="submit" type="submit" value="Save">
                     </div>
                 </div> 
             </form>
