drop-down bg indigo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,7 +140,7 @@
 
 
 /*-----------------------------------------------------------------------------------------------------
-    Horizontal bar
+    Navbars
 ------------------------------------------------------------------------------------------------------*/
 .navbar-global {
     background-color: indigo;
@@ -148,6 +148,7 @@
 
 .navbar-global .navbar-brand {
     color: white;
+    background-color: indigo !important;
 }
 
 .navbar-global .navbar-user > li > a {
@@ -165,9 +166,6 @@
     color: orchid;
 }
 
-/*-----------------------------------------------------------------------------------------------------
-    Vertical collapsible sidebar
-------------------------------------------------------------------------------------------------------*/
 @media (max-width: 768px) {
 
     .navbar-primary  {
@@ -274,6 +272,9 @@ margin-right: 6px;
     margin-left: 60px;
 }
 
+.navbar-collapse {
+    background-color: indigo;
+}
 /*-----------------------------------------------------------------------------------------------------
     Footer
 ------------------------------------------------------------------------------------------------------*/
